# game-of-life

./: LICENSE  README.md  game-of-life.cabal  stack.yaml
seeds/: pulsar.txt
src/: Main.hs
