name:                game-of-life
version:             0.1.0.0
homepage:            https://github.com/ErikCupal/game-of-life
author:              Erik Cupal
maintainer:          erik@cup.al
copyright:           MIT
category:            Games
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable game-of-life
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
